# JenAI

./: .gitignore  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  locations.example.toml  pyproject.toml  rules.example.toml  scenarios.e1.toml  scenarios.example.toml  skills.example.toml
.github/: README.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: README.md  ci.yml  isaac-hil.yml  release.yml  security.yml
.openai/: hosting.json
artifacts/: README.md
docs/: ADOPTION_MODEL.md  ARCHITECTURE.md  CODE_TOUR.md  COMMANDS.md  DATA_SCHEMAS.md  DEMO_SCRIPT.md  EVIDENCE_LEDGER.md  EXPERIMENTS.md  FEATURES.md  HANDOFF.md  ISAAC_HIL_ACCEPTANCE.md  ISAAC_NAV2_SETUP.md  MOSCOW.md  ONBOARDING.md  PAPERS.md  PRODUCT_BRIEF.md  PRODUCT_READINESS.md  PROJECT_DIRECTION.md  QUICKSTART.md  README.md  ROADMAP.md  ROLLBACK.md  SAFETY_CASE.md  STATE_MACHINE.md  SUPPORT_MATRIX.md  TECHNICAL_GUIDE.md  TEST.md  THREAT_MODEL.md  TUI_LIVE_ACCEPTANCE_2026-07-17.md  TUI_LIVE_ACCEPTANCE_2026-07-18.md  TUI_LIVE_ACCEPTANCE_2026-07-19.md  TWIN_SETUP.md  USABILITY_STUDY.md  UX.md  V1_GATE.md  V1_RELEASE_CHECKLIST.md  VEHICLE_POC.md
docs/adr/: 0001-natural-language-dual-path-with-unified-verification.md  0002-site-profile-binds-map-and-coordinates.md  0003-task-outcome-is-separate-from-run-lifecycle.md
docs/archive/design/: ARCHITECTURE.md  DATA_SCHEMAS.md  FEATURES.md  MOSCOW.md  README.md  STATE_MACHINE.md
docs/design/: UX.md
docs/operations/: DATA_LIFECYCLE.md  DEMO_SCRIPT.md  ROLLBACK.md  TWIN_SETUP.md  VERSIONING.md
docs/product/: HANDOFF.md  PRODUCT_BRIEF.md  PRODUCT_READINESS.md  PROJECT_DIRECTION.md  ROADMAP.md  V1_GATE.md  V1_RELEASE_CHECKLIST.md
docs/releases/: README.md  v0.23.0.md  v0.23.1.md  v0.23.2.md  v0.23.3.md  v0.23.4.md  v0.23.5.md  v0.23.6.md  v0.25.0.md  v0.25.1.md  v0.26.0.md  v0.27.0.md  v0.28.0.md  v0.29.0.md  v0.30.0.md  v0.30.1.md  v0.31.0.md  v0.32.0.md  v0.32.1.md  v0.33.0.md  v0.33.1.md  v0.33.2.md  v0.34.0.md  v0.34.1.md  v0.34.2.md  v0.35.0.md  v0.36.0.md  v0.36.1.md  v0.36.2.md  v0.36.3.md  v0.37.0.md  v1.0.0.md  v1.1.0.md  v1.1.1.md  v1.1.2.md  v1.1.3.md  v1.1.4.md  v2.0.0.md  v2.0.1.md  v2.0.2.md  (+2 more)
docs/validation/: EVIDENCE_LEDGER.md  EXPERIMENTS.md  ISAAC_HIL_ACCEPTANCE.md  SAFETY_CASE.md  TEST.md  THREAT_MODEL.md  TUI_LIVE_ACCEPTANCE_2026-07-17.md  TUI_LIVE_ACCEPTANCE_2026-07-18.md
e2-20260715-invalid-v1/: targets.json  trials.jsonl
e2-20260715b/: trials.jsonl
log/: latest_version-check
scripts/: README.md  __init__.py  b4_driver.sh  e2_ablation.py  e2_reanalyze.py  e3_agent_bench.py  e3_mock_ugv.py  e4_bench.py  isaac_hil_acceptance.py  jenai  soak.py  usability_study.py
src/jenai/: README.md  __init__.py  __main__.py  capabilities.py  capability_localization.py  capability_reporting.py  secure_files.py  subprocesses.py
src/jenai/acceptance/: __init__.py  isaac_hil.py
src/jenai/adapters/: README.md  __init__.py  locations.py  ros2_adapter.py  route_adapter.py
src/jenai/agent/: README.md  __init__.py  context.py  fast_paths.py  guardrails.py  instructions.py  orchestrator.py  plan_agent.py  run_agent.py  runtime.py  session.py  specialists.py  tracing.py
src/jenai/bridge/: README.md  __init__.py  _avoidance.py  _bounded_publisher.py  _drive_control.py  _navigation_state.py  _occupancy.py  _protocol.py  _safety_order.py  _server.py  _watchdog.py  _wire.py  client.py  ros_bounded_publisher.py  ros_bridge.py
src/jenai/cli/: README.md  __init__.py  data.py  main.py
src/jenai/config/: README.md  __init__.py  models.py  setup.py  store.py
src/jenai/daemon/: README.md  __init__.py  engine.py  runner.py
src/jenai/doctor/: README.md  __init__.py  checks.py  site.py
src/jenai/mcp_server/: README.md  __init__.py  server.py
src/jenai/providers/: README.md  __init__.py  agent_model.py  chat.py
src/jenai/schemas/: README.md  __init__.py  models.py  outputs.py
src/jenai/state/: README.md  __init__.py  audit.py  data_hardening.py  data_lifecycle.py  history.py  reports.py  runs.py  session.py  task_receipts.py
src/jenai/tools/: README.md  __init__.py  approval_formatters.py  decision_core.py  decision_eval.py  drive_core.py  mission_core.py  nav_live.py  navigation_gateway.py  perception.py  registry.py  ros2_agent_tools.py  ros2_core.py  ros2_pkg_core.py  route_action.py  route_agent_tools.py  route_core.py  safety.py  shell_agent_tools.py  shell_core.py  skills.py  summaries.py  tracking.py  user_skills.py  vision_agent_tools.py  vision_core.py
src/jenai/tui/: README.md  __init__.py  app.py  approval_flow.py  approval_policy.py  catalog.py  direct_execution.py  help_content.py  host_contract.py  info_commands.py  location_commands.py  panels.py  robot_commands.py
src/jenai/twin/: README.md  __init__.py  gate.py
src/jenai/webui/: README.md  __init__.py  render.py  (+2 more)
tests/: README.md  conftest.py
tests/integration/: README.md  test_cli.py  test_data_cli.py  test_data_cli_credentials.py  test_data_cli_setup_bypass.py  test_data_harden_cli.py
tests/unit/: README.md  fake_bridge.py  test_agent_model.py  test_agent_phase1.py  test_agent_phase2.py  test_architecture.py  test_audit.py  test_avoidance.py  test_bridge_client.py  test_bridge_protocol.py  test_bridge_server.py  test_bridge_state.py  test_bridge_wire.py  test_capabilities.py  test_capabilities_ugv.py  test_capability_fast_path.py  test_capability_fast_run.py  test_config.py  test_daemon.py  test_data_hardening.py  test_data_lifecycle.py  test_decision.py  test_doctor.py  test_doctor_site.py  test_doctor_site_async.py  test_drive_control.py  test_drive_core.py  test_e2_ablation.py  test_e3_agent_bench.py  test_env_file.py  test_export_protection.py  test_help_content.py  test_hil_site_gate.py  test_isaac_hil.py  test_launcher.py  test_loc_add.py  test_locations.py  test_mcp_server.py  test_mission_core.py  test_nav_live.py  (+37 more)
website/: package-lock.json  package.json  wrangler.jsonc
website/app/: globals.css  layout.tsx  page.tsx
website/components/: doc-elements.tsx  docs-shell.tsx
website/lib/: content.tsx  navigation.ts
(+8 files in other folders)
