[project]
name = "jenai"
version = "0.13.2"
description = "Terminal-first AI agent interface for ROS2 robot workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.50.0",
    "openai-agents>=0.2.0",
    "litellm>=1.60.0",
    "pydantic>=2.8.0",
    "rich>=13.7.0",
    "textual>=0.80.0",
    "typer>=0.12.0",
    "mcp>=1.28.1",
]

[dependency-groups]
dev = [
    "hatchling>=1.25.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
JenAI = "jenai.cli.main:app"
jenai = "jenai.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jenai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# The WebUI embeds CSS/HTML/JS as string literals (fonts URL, CSS rules, HTML
# fragments) that legitimately exceed the line-length limit.
"src/jenai/webui/server.py" = ["E501"]
"src/jenai/webui/render.py" = ["E501"]
"src/jenai/webui/commands.py" = ["E501"]
