[project]
name = "jenai"
version = "2.0.0"
description = "Terminal-first AI agent interface for ROS2 robot workflows."
readme = "README.md"
authors = [{ name = "林書任 / LIN, SHU-JEN" }]
maintainers = [{ name = "林書任 / LIN, SHU-JEN" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["AI agent", "Nav2", "robotics", "ROS 2", "unmanned ground vehicle"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.50.0",
    "openai-agents>=0.2.0",
    "pydantic>=2.8.0",
    "rich>=13.7.0",
    "textual>=0.80.0",
    "typer>=0.12.0",
    "mcp>=1.28.1",
    "tomli-w>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/rennn0223/JenAI"
Repository = "https://github.com/rennn0223/JenAI"
Issues = "https://github.com/rennn0223/JenAI/issues"

[dependency-groups]
dev = [
    "hatchling>=1.25.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
JenAI = "jenai.cli.main:app"
jenai = "jenai.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jenai"]

[tool.hatch.build.targets.sdist]
# Defense in depth: Hatch normally follows Git's tracked-file set, but a local
# build must never package workstation state, credentials, or thesis material.
exclude = [
    "/.agents/",
    "/.claude/settings.local.json",
    "/.codex/",
    "/.env",
    "/.env.*",
    "/artifacts/",
    "/audit.sqlite3*",
    "/log/",
    "/memory/",
    "/docs/PAPERS.md",
    "/docs/THESIS_*.md",
    "/docs/thesis-assets/",
    "/docs/thesis-v*-media/",
    "/scripts/build_thesis_*.py",
    "/scripts/export_thesis_markdown.py",
    "/*.docx",
    "/*.pdf",
    "/*.pptx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# The WebUI embeds CSS/HTML/JS as string literals (fonts URL, CSS rules, HTML
# fragments) that legitimately exceed the line-length limit.
"src/jenai/webui/server.py" = ["E501"]
"src/jenai/webui/render.py" = ["E501"]
"src/jenai/webui/commands.py" = ["E501"]
