[project]
name = "jenai"
version = "2.2.0"
description = "Terminal-first AI agent interface for ROS2 robot workflows."
readme = "README.md"
authors = [{ name = "林書任 / LIN, SHU-JEN" }]
maintainers = [{ name = "林書任 / LIN, SHU-JEN" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["AI agent", "Nav2", "robotics", "ROS 2", "unmanned ground vehicle"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.50.0,<3",
    "openai-agents>=0.2.0,<1",
    "pydantic>=2.8.0,<3",
    "rich>=13.7.0,<16",
    "textual>=0.80.0,<9",
    "typer>=0.12.0,<1",
    "mcp>=1.28.1,<2",
    "tomli-w>=1.2.0,<2",
]

[project.urls]
Homepage = "https://github.com/rennn0223/JenAI"
Repository = "https://github.com/rennn0223/JenAI"
Issues = "https://github.com/rennn0223/JenAI/issues"

[dependency-groups]
dev = [
    "hatchling>=1.25.0,<2",
    "mypy>=1.15.0,<3",
    "pytest>=8.2.0,<10",
    "pytest-cov>=5.0.0,<8",
    "ruff>=0.6.0,<1",
]

[project.scripts]
JenAI = "jenai.cli.main:app"
jenai = "jenai.cli.main:app"

[build-system]
requires = ["hatchling>=1.25.0,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jenai"]

[tool.hatch.build.targets.sdist]
# Defense in depth: Hatch normally follows Git's tracked-file set, but a local
# build must never package workstation state, credentials, or thesis material.
exclude = [
    "/.agents/",
    "/.claude/settings.local.json",
    "/.codex/",
    "/.env",
    "/.env.*",
    "/artifacts/**",
    "/audit.sqlite3*",
    "/log/",
    "/memory/",
    "/docs/local/thesis/",
    "/docs/thesis-assets/",
    "/docs/thesis-v*-media/",
    "/scripts/build_thesis_*.py",
    "/scripts/export_thesis_markdown.py",
    "/website/",
    "/*.docx",
    "/*.pdf",
    "/*.pptx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
show_error_codes = true
pretty = true
files = ["src/jenai"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DTZ", "PERF", "PIE", "RUF012", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
# The WebUI embeds CSS/HTML/JS as string literals (fonts URL, CSS rules, HTML
# fragments) that legitimately exceed the line-length limit.
"src/jenai/webui/server.py" = ["E501"]
"src/jenai/webui/render.py" = ["E501"]
"src/jenai/webui/commands.py" = ["E501"]
